CSS Card Gap Fix

--- a/style.css
+++ b/style.css
@@ -192,10 +192,10 @@ nav {
 .character-card img {
     width: 100%;
     height: 280px;
-    border-radius: 10px;
+    border-radius: 15px 15px 0 0;  
     margin: 0px;
     object-fit: cover;
-    border-bottom: 3px solid var(--orange);
+    display: block;  
 }
 
 .character-name {
@@ -519,6 +519,10 @@ a:hover{
   justify-content: center;
   align-content: center;
   padding: 30px;
+
+  p{
+    color: var(--yellow);
+  }
 }
 
 /* ===== CHARACTERS PAGE ===== */
